added css styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+	<link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
   </head>
   <body>
@@ -12,7 +13,7 @@
       CS Major, class of 2019
     </p>
     <p>
-      I am interested in internet and telecommunications infrastructure and governance.
+      I am interested in internet and telecommunications infrastructure and Internet Governance.
     </p>
 
     <h2>Experience</h2>
@@ -28,7 +29,11 @@
       <ul>
       <li>Advanced Competer Networks</li>
 	  <li>Artificial Intelligence</li>
-      <li>(Most other 4000 level classes)</li>
+	  <div id="expandable">
+      	<li>more...</li>
+		<li>more...</li>
+		<li>more...</li>
+	  </div>
     </ul>
     </p>
   </body>
