--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Erika Snow</h1>
     <p>
-      [Self introduction]
+      Class of 2019
     </p>
     <p>
-      [Major and other information]
+      Robotics Engineering and Computer Science
     </p>
     <p>
-      [Other things]
+      Classes I've taken:
+      Software Engineering, Operating Systems, Algorithms, Foundations of Computer Science, Theory of Computation, etc.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Working experience:
+
+      HTML - none
+      CSS - minimal
+      Java - a lot
+      JavaScript - barely any, but enough to know not having types bothers me SO MUCH
+      Ruby - none
+      Python - none
+      unit testing - a lot
     </p>
     <ul>
       <li>IBM/Rational</li>
