--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Paul-Henry Schoenhagen</h1>
     <p>
-      [Self introduction]
+      Hey there! I'm Paul-Henry Schoenhagen!
     </p>
     <p>
       [Major and other information]
