--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about [Yifei Jin]</h1>
     <p>
-      [Self introduction]
+      [I am class of 2019]
     </p>
     <p>
-      [Major and other information]
+      [I am computer science major and data science minor]
     </p>
     <p>
-      [Other things]
+    [I have taken many computer science classes at WPI including OS, OOAD, ML and etc..]
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+     I had one internship and I am more familiar with Java and python. 
     </p>
     <ul>
-      <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
   </body>
