--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <p>
       Working experience:
 
-      HTML - none
-      CSS - minimal
-      Java - a lot
-      JavaScript - barely any, but enough to know not having types bothers me SO MUCH
-      Ruby - none
-      Python - none
-      unit testing - a lot
+      HTML - none <br />
+      CSS - minimal <br />
+      Java - a lot <br />
+      JavaScript - barely any, but enough to know not having types bothers me SO MUCH <br />
+      Ruby - none <br />
+      Python - none <br />
+      unit testing - a lot <br />
     </p>
     <ul>
       <li>IBM/Rational</li>
