--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <h2>Experience</h2>
     <p>
-      Working experience:
-
+      Working experience: <br />
+      <br />
       HTML - none <br />
       CSS - minimal <br />
       Java - a lot <br />
