didn't understand the bullet points, but fixed it maybe?

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
       Python - none <br />
       unit testing - a lot <br />
     </p>
+    <p>
+      Internships:
+    </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Compassion International</li>
     </ul>
   </body>
 </html>
