--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 
     <h2>Experience</h2>
     <p>
-      Working experience: <br />
-      <br />
-      HTML - none <br />
-      CSS - minimal <br />
-      Java - a lot <br />
-      JavaScript - barely any, but enough to know not having types bothers me SO MUCH <br />
-      Ruby - none <br />
-      Python - none <br />
-      unit testing - a lot <br />
+      Working experience: 
     </p>
+    <ul>
+      <li>HTML - none</li>
+      <li>CSS - minimal</li>
+      <li>Java - a lot</li>
+      <li>JavaScript - barely any, but enough to know not having types bothers me SO MUCH</li>
+      <li>Ruby - none</li>
+      <li>Python - none</li>
+    </ul>
+    
     <p>
       Internships:
     </p>
