new stuff for beginning

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
-<html lang="en">
+﻿<html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Robert Harrison</h1>
     <p>
-      [Self introduction]
+      Hi there, my name is Robert Harrison and I'm a part of WPI's class of 2019!
     </p>
     <p>
-      [Major and other information]
+      I am a Computer Science major with a Psychology minor at Worcester Polytechnic Institute. 
     </p>
     <p>
-      [Other things]
+      I have previosuly taken the Human Computer Interaction course at WPI, as well as Artificial Intelligence, 
+      Software Security, and Foundations of Computer Science among others. 
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Over the summer, I worked in software drivers at Teradyne. There I worked on fixing various bugs and adding features to
+      their High Speed subsytem, which is a chassis that can hold various testing equipment. All of the coding was done in C++, and C#.
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+        Coding languages and my familiarity with them:
+        <li>* HTML: some</li>
+        <li>* CSS: some</li>
+        <li>* Java: a lot</li>
+        <li>* JavaScript: some</li>
+        <li>* Ruby: none</li>
+        <li>* Python: a lot</li>
+        <li>* unit testing: a lot</li>
+</ul>
   </body>
 </html>
