--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Chris Bell</h1>
     <p>
-      [Self introduction]
+      Hey, I'm Chris Bell!
     </p>
     <p>
-      [Major and other information]
+      I'm a Computer Science major and I'm a part of WPI's Class of 2020.
     </p>
     <p>
-      [Other things]
+      I love the outdoors and love to do everything from hiking and camping to kayaking and fishing. In my down time, I enjoy
+      playing video games with my friends and just hanging out. 
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      At WPI, I've taken: Introduction to Program Design (CS 1101), Object-Oriented Design Concepts (CS 2102), 
+      Systems Programming Concepts (CS 2303), Introduction to Machine Organization and Assembly Language (CS 2011), 
+      Operating Systems (CS 3013), Algorithms (CS 2223), and Human-Computer Interaction (CS 3041).
+    </p>
+    <p>
+      Outside of school, I have worked as a volunteer programmer at Senate Technology Services in Albany and as a student 
+      programmer for New York State Information Technology Services primarily doing front-end design.
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>HTML         - A lot of experience</li>
+      <li>CSS          - A lot of experience</li>
+      <li>Java         - A lot of experience</li>
+      <li>JavaScript   - Some experience</li>
+      <li>Ruby         - No experience</li>
+      <li>Python       - Some experience</li>
+      <li>Unit Testing - Some experience</li>
+
     </ul>
   </body>
 </html>
