--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about Chris Bell</h1>
+    <h1 style="text-decoration: underline;">Information about Chris Bell</h1>
     <p>
       Hey, I'm Chris Bell!
     </p>
@@ -16,7 +16,7 @@
       playing video games with my friends and just hanging out. 
     </p>
 
-    <h2>Experience</h2>
+    <h2 style="text-decoration: underline;">Experience</h2>
     <p>
       At WPI, I've taken: Introduction to Program Design (CS 1101), Object-Oriented Design Concepts (CS 2102), 
       Systems Programming Concepts (CS 2303), Introduction to Machine Organization and Assembly Language (CS 2011), 
