Modified index.html and README.md

--- a/index.html
+++ b/index.html
@@ -2,26 +2,62 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+  <style>
+  a:link {
+    color: blue; 
+    background-color: transparent; 
+    text-decoration: none;
+  }
+
+  a:visited {
+      color:red;
+      background-color: transparent;
+      text-decoration: none;
+  }
+
+  a:hover {
+      color:green;
+      background-color: transparent;
+      text-decoration: underline;
+  }
+  </style>
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1 style="color:blue;">Information about Myo Min Thant</h1>
+    <h3>Self Introduction</h3>
     <p>
-      [Self introduction]
+      Hi! My name is Myo Min Thant. I come from <a href="https://en.wikipedia.org/wiki/Myanmar" target="_blank">Myanmar</a>.
     </p>
+    <h3>Majors and Minor</h3> 
     <p>
-      [Major and other information]
+      I am currently a Junior majoring in Computer Science and minoring in Computer Engineering.
     </p>
+    <h3>More about me!</h3> 
     <p>
-      [Other things]
+      My specific interests in Computer Science are Web Development and Mobile App Development. I am more familiar with
+      Java Spring frameworks. I am currently new to nodeJS but I have built a messenger chatbot developed with nodeJS so far.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      For the last summer 2018, I worked at <a href="https://www.bindez.com" target="_blank">Bindez</a> as a Software Developer Intern. Bindez is a company which does 
+      Natural Language Processing for Myanmar Language and Social Insights and analysis for other companies.
+      I, as a software developer, was responsible with implementing tools for researchers and main products, 
+      indexing Myanmar language as we pushed further in natural language processing (new keywords, new trends, confusion matrix), 
+      and training dataset and finding anomalies.
     </p>
+    <h2>Stacks and Languages</h2>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Java</li>
+      <li>Spring Framework</li>
+      <li>Python</li>
+      <li>nodeJS</li>
+      <li>C</li>
+      <li>C++</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Postgresql</li>
+      <li>MongoDB</li>
     </ul>
   </body>
 </html>
