--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Information about Robert Harrison</h1>
@@ -21,15 +22,15 @@
       Over the summer, I worked in software drivers at Teradyne. There I worked on fixing various bugs and adding features to
       their High Speed subsytem, which is a chassis that can hold various testing equipment. All of the coding was done in C++, and C#.
     </p>
+    <h2>Coding languages and my familiarity with them:</h2>
     <ul>
-        Coding languages and my familiarity with them:
-        <li>* HTML: some</li>
-        <li>* CSS: some</li>
-        <li>* Java: a lot</li>
-        <li>* JavaScript: some</li>
-        <li>* Ruby: none</li>
-        <li>* Python: a lot</li>
-        <li>* unit testing: a lot</li>
-</ul>
+        <li>HTML: some</li>
+        <li>CSS: some</li>
+        <li>Java: a lot</li>
+        <li>JavaScript: some</li>
+        <li>Ruby: none</li>
+        <li>Python: a lot</li>
+        <li>unit testing: a lot</li>
+    </ul>
   </body>
 </html>
