--- a/index.html
+++ b/index.html
@@ -3,39 +3,49 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-  <center>
     <body>
-      <font face="georgia">
-        <h1>Information about Andrew DeRusha</h1>
-        <h3>Hi everyone, I'm Andrew. I'm a junior CS major.</h3>
-      </font>
-      <font face="verdana">
-        <p>
-          Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
-        </p>
-        <img src="Render2.png" alt="Town from far" width="320" height="200">
-        <img src="Render3.png" alt="Town up close" width="320" height="200">
-        <img src="Render5.png" alt="Template Enterence" width="320" height="200">
-        <img src="Render10.png" alt="Tomb" width="320" height="200">
-      
-        <p style="margin-left:4em; margin-right: 4em">
-          I've had coding expereince with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
-          I've never code in Javascript, so I'm looking forward to that!
-        </p>
-      </font>
+      <center>
+        <font face="georgia">
+          <h1>Information about Andrew DeRusha</h1>
+          <h3>Hi everyone, I'm Andrew. I'm a junior CS major.</h3>
+        </font>
+        <font face="verdana">
+          <p>
+            Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
+          </p>
+          <img src="Render2.png" alt="Town from far" width="320" height="200">
+          <img src="Render3.png" alt="Town up close" width="320" height="200">
+          <img src="Render5.png" alt="Template Enterence" width="320" height="200">
+          <img src="Render10.png" alt="Tomb" width="320" height="200">
 
-      <font face="georgia">
-        <h2>Experience</h2>
-      </font>
+          <p style="margin-left:4em; margin-right: 4em">
+            I've had coding expereince with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
+            I've never code in Javascript, so I'm looking forward to that!
+          </p>
+        </font>
+
+        <font face="georgia">
+          <h2>Experience</h2>
+        </font>
+      </center>
       <font face="verdana">
         <p style="margin-left:4em; margin-right: 4em">
           My work experience involves summer interships working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
         </p>
+        <h2 style="margin-left:4em; margin-right: 4em">
+          Related Courses
+        </h2>  
         <ul style="margin-left:4em; margin-right: 4em">
-          <li>IBM/Rational</li>
-          <li>WPI</li>
+          <li>Accelerated Introduction to Program Design</li>          
+          <li>Object-Oriented Design Concepts</li>
+          <li>Systems Programming Concepts</li>
+          <li>Assembly Language</li>
+          <li>Operating Systems</li>
+          <li>Algorithms</li>
+          <li>Human Computer Interactions</li>
+          <li>Foundations of Computer Science</li>
+          <li>Software Engineering</li>
         </ul>
       </font>
     </body>
-  </center>
 </html>
