--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       Operating Systems (CS 3013), Algorithms (CS 2223), and Human-Computer Interaction (CS 3041).
     </p>
     <p>
-      Outside of school, I have worked as a volunteer programmer at Senate Technology Services in Albany and as a student 
-      programmer for New York State Information Technology Services primarily doing front-end design.
+      Outside of school, I have worked as a volunteer programmer at the New York State Senate in Albany and as a student 
+      programmer for New York State Information Technology Services primarily doing front-end design and working with Angular.
     </p>
     <ul>
 
