--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Alex Hard</h1>
     <p>
-      [Self introduction]
+      Class of 2019. first time doing any sort of webware development. 
     </p>
     <p>
-      [Major and other information]
+      Computer Science Major. Business Minor.
     </p>
     <p>
-      [Other things]
+      Love for all things automotive. Except Electric cars; not about that.
     </p>
 
     <h2>Experience</h2>
@@ -20,8 +20,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>WPI - ITS Desk</li>
+      <li>Newport News Shipbuilding  - Augmented Reality Research</li>
     </ul>
   </body>
 </html>
