--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
       Class of 2019. first time doing any sort of webware development. 
     </p>
     <p>
-      Computer Science Major. Business Minor.
+      Computer Science Major. Business Minor. Taken classes such as: Databases 1, software engineering, social implications, 
+      Operating systems, systems, assembly and machine org, pretty much all undergrad courses sans 4000 levels.
     </p>
-    <p>
-      Love for all things automotive. Except Electric cars; not about that.
-    </p>
+    <ul>   
+      <li>HTML - some experience</li>
+      <li>CSS - same experience </li>
+      <li>Java - experienced </li>
+      <li>JavaScript - no experience </li>
+      <li>Ruby - no experience </li>
+      <li>Python - experienced </li>
+      <li>unit testing - some experience </li>
+
+    </ul>
 
     <h2>Experience</h2>
     <p>
