Modified index.html with basic information.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <html lang="en">
-  <head>
+<head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+</head>
+<body>
+<h1>Lucas Sacherer</h1>
+<h2>WPI Class of 2019</h2>
+<p>
+    I'm a CS major interested in back end programming. I've taken the following CS classes:
+</p>
+<ul>
+    <li>CS 1102: Accelerated Intro to Program Design</li>
+    <li>CS 2011: Introduction to Machine Organization and Assembly</li>
+    <li>CS 2022: Discrete Mathematics</li>
+    <li>CS 210X: Accelerated Object-Oriented Design Concepts</li>
+    <li>CS 2303: Systems Programming Concepts</li>
+    <li>CS 3013: Operating Systems</li>
+    <li>CS 3133: Foundations of Computer Science</li>
+    <li>CS 3431: Database Systems I</li>
+    <li>CS 3516: Computer Networks</li>
+    <li>CS 3733: Software Engineering</li>
+    <li>CS 4120: Analysis of Algorithms</li>
+    <li>CS 4513: Distributed Systems</li>
+</ul>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
+<h2>Experience</h2>
+<p>
+    Language Experience:
+</p>
+<ul>
+    <li>HTML: some</li>
+    <li>CSS: some</li>
+    <li>Java: a lot</li>
+    <li>JavaScript: some</li>
+    <li>Ruby: none</li>
+    <li>Python: a lot</li>
+    <li>Unit Testing: a lot</li>
+</ul>
+<p>
+    Working experience:
+</p>
+<ul>
+    <li>WPI (ML Research Assistant)</li>
+    <li>Worldpay</li>
+</ul>
+</body>
 </html>
