--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <p style="margin-left:5em; margin-right: 5em">
           My work experience involves summer interships working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
         </p>
-        <h2 style="margin-left:5em; margin-right: 5em">
-          Related Courses
-        </h2>  
+        <font face="georgia">
+          <h2 style="margin-left:5em; margin-right: 5em">
+            Related Courses
+          </h2>
+        </font>
         <ul style="margin-left:4em; margin-right: 4em">
           <li>Accelerated Introduction to Program Design</li>          
           <li>Object-Oriented Design Concepts</li>
