switched to connect to github and autopush to heroku

--- a/index.html
+++ b/index.html
@@ -1,27 +1,76 @@
-<html lang="en">
+ <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1 align="middle" style=" margin-bottom: 5px;">surya vadivazhagu</h1>
+    <div style="display: flex; justify-content: center;">
+    <img src="self.jpg" alt="Avatar">
+  </div>
+    <div class="topnav" align="middle">
+        <a class="active" href="https://open.spotify.com/user/r3ld3rn?si=RAfd5akfShGcp2anc8vSyQ" target="_blank">spotify</a>
+        /
+        <a href="https://github.com/svadivazhagu" target="_blank" >github</a>
+        /
+        <a href="mailto:svadivazhagu@wpi.edu">e-mail me</a>
+        /
+        <a href="suryaResumeAug.pdf" target="_blank">résumé</a>
+    </div>
+    <h3>objective</h3>
     <p>
-      [Self introduction]
+     passionate computer science student looking to leverage my experience for the purposes of <br>
+     enhanced web and system development while gaining experience about the industry and the current state of the CS world. </br> 
     </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h3>educational background</h3>
+    <ul><li>Computer Science @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
+        <li><i>pursuing a B.Sc in Computer Science.</i></li> </ul>
+        <li>Bioinformatics & Computational Biology (BCB) @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
+        <li><i>pursuing a Minor in BCB.</i></li> </ul>
+    </ul>      
+    <h3>some past courses @ WPI</h3>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+        <li>CS-3733 <i>Software Engineering</i></li>
+        <li>CS-3043 <i>Social Implications of Computing</i></li>
+        <li>CS-3041 <i>Human-Computer Interaction</i></li>
+        <li>CS-2011 <i>Assembly & Machine Language</i></li>
+        <li>CS-2102 <i>Systems Programming Concepts</i></li>
     </ul>
-  </body>
+    <h3>programmatic experience</h3> 
+    hover over each language to reveal my experience! <br>
+    <ul>
+        <li> <div class="tooltip">html 
+            <span class="tooltiptext">I've designed personal web pages as well as for campus clubs and have a decent amount of experience with HTML.</span>
+          </div></li>
+         <li><div class="tooltip">css/js 
+            <span class="tooltiptext">I've used Bootstrap to design dynamic and rich websites, and I love i-frames! Being able to connect to so many web services through JS is fantastic. Love RESTful APIs!</span>
+          </div></li>
+         <li><div class="tooltip">java 
+            <span class="tooltiptext">Significant knowledge, I've worked as a back-end engineer creating metrics apps to measure performance for microservice-based programs on AWS.</span>
+          </div></li>
+           <li><div class="tooltip">ruby 
+            <span class="tooltiptext">None as of yet. Hope to get some in WebWare!</span>
+          </div></li>
+        <li><div class="tooltip">junit/testing 
+            <span class="tooltiptext">Good experience with JUnit as well as Mockito for Java unit testing. Have used Postman to test my APIs.</span>
+          </li>
+    </ul>
+   
+    <h3>
+      work experience
+    </h3>
+    <ul>
+      <li>TraceLink, Inc.</li>
+        <ul>
+            <li>Software Engineering Intern, <i>May 2018 - July 2018</i></li>
+        </ul>
+     <li>Virginia Department of Health</li>
+        <ul>
+            <li>Community Outreach Intern, <i>May 2017 - Aug. 2017</i></li>
+        </ul>
+    </ul>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+  
 </html>
