--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
   <body>
     <h1>Information about Jason King</h1>
     <p>
-      [Self introduction]
+      Welcome to my webpage!
     </p>
+    <h2>Major</h2>
     <p>
-      [Major and other information]
+      Bachelors of Compupter Science
     </p>
+    <h2>Computer Science Classes</h2>
     <p>
-      [Other things]
+      yo I take classes yeet
     </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h2 onmouseover="htmlAdjust(this)">Language Experience</h2>
     <ul>
       <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
+    <h2>Working Experience</h2>
+    <ul>
+      <li>CFN</li>
+      <li>Dell</li>
+    </ul>
   </body>
+  <script>
+      function htmlAdjust(slider) {
+        slider.value = "10"
+        window.alert("yeet we out here")
+      }
+  </script>
 </html>
