--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
-<html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Yufei Gao]</h1>
-    <p>
-      WPI class of 2020 (plan to graduate in 2019)
-    </p>
-    <p>
-      CS Major, Data Science Minor
-    </p>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css" type="text/css" >
+  <title>CS4241 Assignment 1</title>
+  <meta charset="utf-8">
+</head>
+<body>
+  <div id="left">
     <p>
       Previous computer science courses that I have taken at WPI:<br>
-      CS1101, CS2011, CS2022, CS2102, CS2223, CS2303, CS3013, CS3133, CS3431, CS3733, CS4432<br>
-      Currently I am taking:<br>
-      CS4241 & CS4120
+      <ul>
+        <li>CS1101</li>
+        <li>CS2011</li>
+        <li>CS2022</li>
+        <li>CS2102</li>
+        <li>CS2223</li>
+        <li>CS2303</li>
+        <li>CS3013</li>
+        <li>CS3133</li>
+        <li>CS3431</li>
+        <li>CS3733</li>
+        <li>CS4432</li>
+      </ul>
+    </P>
+    <p>
+      Currently I am taking:
+      <ul>
+        <li>CS4241</li>
+        <li>CS4120</li>
+      </ul>
+    </p>
+  </div>
+  <div id="center">
+    <h1 style="margin-bottom:40px;">Information about [<b>Yufei Gao</b>]</h1>
+    <p>
+      WPI class of 2020  <u style = "color:grey;">(plan to graduate in 2019)</u>
     </p>
     <p>
-      My experience with the following technologies and methods (none, some, a lot):<br>
-      HTML: none<br>
-      CSS: some<br>
-      Java: a lot<br>
-      JavaScript: none<br>
-      Ruby: none<br>
-      Python: some<br>
-      unit testing: some
+      Major: Computer Science<br>
+      Minor: Data Science<br>
     </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+    <p>
+      Favorite meme:<br>
+      <img src = "meme.jpeg" width="220px" height="350px" style="margin-left:90px; margin-top:5px;">
+    </p>
+  </div>
+  <div id="right">
+    <p>
+      My experience with the following technologies and methods (none, some, a lot):<br>
+      <ul>
+        <li>HTML: none</li>
+        <li>CSS: some</li>
+        <li>Java: a lot</li>
+        <li>JavaScript: none</li>
+        <li>Ruby: none</li>
+        <li>Python: some</li>
+        <li>unit testing: some</li>
     </ul>
-  </body>
+    </p>
+  </div>
+</body>
 </html>
