fixed image url

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </p>
     <p>
       Favorite meme:<br>
-      <img src = "pics.me.me/my-code-doesnvt-work-have-no-idea-why-my-code-14032928.png" width="220px" height="350px" style="margin-left:90px; margin-top:5px;">
+      <img src = "https://pics.me.me/my-code-doesnvt-work-have-no-idea-why-my-code-14032928.png" width="220px" height="350px" style="margin-left:90px; margin-top:5px;">
     </p>
   </div>
   <div id="right">
