--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
       [Computer Science Major and Data Science Minor]
     </p>
     <p>
-      [CS1101, CS2102, CS2303, CS2011, CS3733, CS3133, CS3013, CS4432]
+      [CS1101 Introduction to Program Design
+       CS2102 Object-oriented Design Concepts
+       CS2303 System Programming Concepts
+       CS2022 Discrete Mathmatics
+       CS2011 Introduction to Machine Organization and Assembly Language
+       CS3733 Software Engineering
+       CS3133 Foundation of Computer Science
+       CS3013 Operating System
+       CS4432 Database System II
+       CS4241 Webware(this term)
+       CS4120 Analysis of Algorithms(this term)]
     </p>
 
-    <h2>Experience [Java, CSS, C, C++, Database]</h2>
+    <h2>Experience [Java, C, C++, Database]</h2>
     <p>
     </ul>
   </body>
