--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
     </p>
 
     <h2>Experience</h2>
-    <p>
-      HTML - none
-      CSS - some
-      Java - a lot
-      JavaScript - none
-      Ruby - none
-      Python - a lot
-      unit testing - some
-    </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>HTML - none</li>
+      <li>CSS - some</li>
+      <li>Java - a lot</li>
+      <li>JavaScript - none</li>
+      <li>Ruby - none</li>
+      <li>Python - a lot</li>
+      <li>unit testing - some</li>
     </ul>
   </body>
 </html>
