Updated README and populated index.html with personal information

--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Kamil Gumienny</h1>
     <p>
-      [Self introduction]
+       Hey everyone, it's your favorite person named Kamil Gumienny!
     </p>
     <p>
-      [Major and other information]
+      I am a WPI junior studying Computer Science.
     </p>
     <p>
-      [Other things]
+      Okay first off I just want to say I am blown away that I've taken something on my computer and just uploaded it to my very own internet page that anyone can access. This is actually exciting.
+
+      I'm a junior CS major hoping to get into cyber security.
+      Other things about myself:
+      -I love any and everything outdoors as long as it's not a sport (I'm athletically challanged), most especially taking my puppy (INSERT PICTURE OF KUBUS HERE) on walks.
+      -I enjoy going to the gym. It's my happy place and I need to spend at least 1.5 hours in the gym a day to reset my mojo.
+      -I am a brother of Theta Chi and am currently serving as the interim Secretary. Being in a fraternity adds many obligations to my schedule but I find it worth it because all those obligations are fulfilled with people I enjoy being around.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      On campus I worked with the Athletic Department to help facilitate sporting events (the students in the bright green shirts catching foul soccer balls).
+
+      I currently work on-call for a cybersecurity company in Newport Beach, CA. I enjoy this field of work and hope to enter the workforce as a Cybersecurity Analyst. My goal is to be in a Red Team or a Security Software Developer.
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Java</li>
+      <li>JavaScript</li>
+      <li>Ruby</li>
+      <li>Python</li>
+      <li>Unit Testing</li>
     </ul>
   </body>
 </html>
