--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
      passionate computer science student looking to leverage my experience for the purposes of <br>
      enhanced web and system development while gaining experience about the industry and the current state of the CS world. </br> 
     </p>
-    <h3>educational background</h3>
+    <h3>education</h3>
     <ul><li>Computer Science @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
         <li><i>pursuing a B.Sc in Computer Science.</i></li> </ul>
         <li>Bioinformatics & Computational Biology (BCB) @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
         <li><i>pursuing a Minor in BCB.</i></li> </ul>
     </ul>      
-    <h3>some past courses @ WPI</h3>
+    <h3>courses @ WPI</h3>
     <ul>
         <li>CS-3733 <i>Software Engineering</i></li>
         <li>CS-3043 <i>Social Implications of Computing</i></li>
@@ -59,8 +59,7 @@
     </ul>
    
     <h3>
-      work experience
-    </h3>
+        past work    </h3>
     <ul>
       <li>TraceLink, Inc.</li>
         <ul>
