--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about [Griffin Cecil]</h1>
     <p>
       My name is Griffin Cecil and I am a senior this year, class of 2019.
     </p>
@@ -12,7 +12,7 @@
       I am a computer science major, as I suspect most are, currently without a minor.
     </p>
     <p>
-      Some notable classes I've taken so far have been Software Engineering and Databases.
+      Some notable classes I've taken so far have been Software Engineering and Database Systems.
     </p>
 
     <h2>Experience</h2>
@@ -21,8 +21,7 @@
       JavaScript and Python, and no experience with CSS, HTML, or Ruby.
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+
     </ul>
   </body>
 </html>
