--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-  <body>
-    <h1>Information about [Griffin Cecil]</h1>
+  <body style="text-align:center">
+    <h1>Information about Griffin Cecil</h1>
     <p>
       My name is Griffin Cecil and I am a senior this year, class of 2019.
     </p>
@@ -14,14 +14,11 @@
     <p>
       Some notable classes I've taken so far have been Software Engineering and Database Systems.
     </p>
-
-    <h2>Experience</h2>
-    <p>
-      As far as working experience goes, I've had a lot of experience with Java and unit testing, some experience with
-      JavaScript and Python, and no experience with CSS, HTML, or Ruby.
-    </p>
-    <ul>
-
-    </ul>
+	<div>
+	  <a href="experience.html">Experience</a>
+	</div>
+	<footer>
+	
+	</footer>
   </body>
 </html>
