Added audio and visual files

--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
       Some notable classes I've taken so far have been Software Engineering and Database Systems.
     </p>
 	<div>
-	  <a href="experience.html">Experience</a>
+	  <a href="experience.html">View My Experience</a>
 	</div>
+	
+	<p>Below are my experiments in the ways of html and everything it can do. proceed at your own risk</p>
+
+	<div>
+	  <a href="https://www.youtube.com/watch?v=AXwGVXD7qEQ" target="_blank">Me when I finished this assignment</a>
+	</div>
+	
+	<audio
+		src="Africa.mp3"
+		preload="auto"
+		controls
+		autoplay
+		loop>
+		
+		<p>Your broswer does not support the audio element</p>
+	</audio>
+	
+	<div>
+	  <img src="dancing.gif" alt="Dancing Kid">
+	</div>
+	
 	<footer>
 	
 	</footer>
