adding images and some more updates to html page

--- a/index.html
+++ b/index.html
@@ -2,35 +2,73 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-      <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Information about Robert Harrison</h1>
-    <p>
-      Hi there, my name is Robert Harrison and I'm a part of WPI's class of 2019!
-    </p>
-    <p>
-      I am a Computer Science major with a Psychology minor at Worcester Polytechnic Institute. 
-    </p>
-    <p>
-      I have previosuly taken the Human Computer Interaction course at WPI, as well as Artificial Intelligence, 
-      Software Security, and Foundations of Computer Science among others. 
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Over the summer, I worked in software drivers at Teradyne. There I worked on fixing various bugs and adding features to
-      their High Speed subsytem, which is a chassis that can hold various testing equipment. All of the coding was done in C++, and C#.
-    </p>
-    <h2>Coding languages and my familiarity with them:</h2>
-    <ul>
-        <li>HTML: some</li>
-        <li>CSS: some</li>
-        <li>Java: a lot</li>
-        <li>JavaScript: some</li>
-        <li>Ruby: none</li>
-        <li>Python: a lot</li>
-        <li>unit testing: a lot</li>
-    </ul>
+      <h1>Information About Robert Harrison</h1>
+      <p>
+          <b>Hello, my name is Robert Harrison and I'm a Senior (Class of 2019) at WPI.</b>
+      </p>
+      <p>
+          I am a Computer Science major with a Psychology minor.
+      </p>
+      <p>
+          I have previosuly taken the Human Computer Interaction course at WPI, as well as Artificial Intelligence,
+          Software Security, and Foundations of Computer Science among others.
+      </p>
+      <img src="/imgs/pizzaJoint.jpg" alt="Pizza Joint Logo" />
+      <h2>Experience</h2>
+      <table align="center">
+          <tr>
+              <td>
+                  <img src="images/pizzaJoint.jpg" alt="Pizza Joint Logo" width="200" height="200" />
+              </td>
+              <td>
+                  <img src="images/teradyneLogo.jpg" alt="Teradyne Logo" />
+              </td>
+          </tr>
+          <tr>
+              <td></td>
+          </tr>
+      </table>
+      <p>
+          Over the summer, I worked in software drivers at Teradyne. There I worked on fixing various bugs and adding features to
+          their High Speed subsytem, which is a chassis that can hold various testing equipment. All of the coding was done in C++, and C#.
+      </p>
+      <h3>Coding Languages:</h3>
+      <table align="center">
+          <tr>
+              <th>Language</th>
+              <th>Familiarity</th>
+          </tr>
+          <tr>
+              <td>HTML</td>
+              <td>some</td>
+          </tr>
+          <tr>
+              <td>CSS</td>
+              <td>some</td>
+          </tr>
+          <tr>
+              <td>Java</td>
+              <td>a lot</td>
+          </tr>
+          <tr>
+              <td>Javascript</td>
+              <td>some</td>
+          </tr>
+          <tr>
+              <td>Ruby</td>
+              <td>none</td>
+          </tr>
+          <tr>
+              <td>Python</td>
+              <td>a lot</td>
+          </tr>
+          <tr>
+              <td>Unit Testing</td>
+              <td>a lot</td>
+          </tr>
+      </table>
   </body>
 </html>
