--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         border-color: grey;
       }
     </style>
+
   </head>
   <body>
     <h1>Information about <font color="red">Alexandra Wheeler</font></h1>
@@ -68,6 +69,26 @@
       <li>Rocket Software</li>
       <li>WPI</li>
       <li>Random things for FRC</li>
+      <li>Some things with ROS</li>
     </ul>
+    <button type="button" onclick="addimage(this);">Want to see a
+    picture of my cat?</button>
+
+    <script type="text/javascript">
+        function addimage(button) { 
+          var img = document.createElement("img");
+          img.src = "https://i.imgur.com/OfWVIUu.jpg"; 
+          img.height = 400; 
+          img.width = 300;
+
+          //optionally set a css class on the image
+          var class_name = "foo";
+          img.setAttribute("class", class_name);
+
+          document.body.appendChild(img);
+          button.style.visibility = "hidden";
+        }
+  </script>
+
   </body>
 </html>
