--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Madeline Burke</h1>
     <p>
       [Self introduction]
     </p>
