--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Zhung Keung Moo Feng (Erick)</h1>
     <p>
-      [Self introduction]
+        Class of 2019 | Major: Computer Science | Minor: Data Science
     </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h2>CS courses</h2>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+        <li>CS 1101</li>
+        <li>CS 2102</li>
+        <li>CS 2303</li>
+        <li>CS 2011</li>
+        <li>CS 2223</li>
+        <li>CS 3013</li>
+        <li>CS 3733</li>
+        <li>CS 3516</li>
+        <li>CS 3133</li>
+        <li>CS 3431</li>
+        <li>CS 3041</li>
+        <li>CS 3043</li>
+    </ul>
+    <h2>Experience</h2>
+    <ul>
+        <li>HTML: some</li>
+        <li>CSS: some</li>
+        <li>Java: a lot</li>
+        <li>Javascript: a lot</li>
+        <li>Ruby: none</li>
+        <li>Python: some</li>
+        <li>Unit Testing: some</li>
     </ul>
   </body>
 </html>
