--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <html lang="en">
   <head>
+      <style type="text/css">
+          h1{color:#23519b}
+          h1,h2{font-family:Georgia;}
+          p.a,p.b,p.c,p.d {color: #709de5}
+          p.c {font-family: Comic Sans MS;}
+          
+
+#section{
+    width:500px;
+    float: center;
+    padding: 5px;
+    margin: 100px;
+}
+      
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+       </style>
   </head>
-  <body>
-    <h1>Information about [Ruyue Wang]</h1>
-    <p>
-      [Class of 2020 at WPI. I enjoy doing handcratfs especially the fabric art flowers. I also like travling and playing the piano.]
+  
+  <body align = " center">
+    <h1 align="center">Information About [Ruyue Wang]</h1>
+    <hr width=95% size=3 color=#23519b style="border:3 black"/>
+    <h2 align = "center"> Basic Info</h2>
+    <hr width=70% />
+    <p class="a">
+      Class of 2020 at WPI. I enjoy doing handcratfs especially the fabric art flowers. I also like travling and playing the piano.
     </p>
-    <p>
-      [Computer Science Major and Data Science Minor]
+    <br/>
+    <p class="b">
+      Computer Science Major and Data Science Minor
     </p>
-    <p>
-      [CS1101, CS2102, CS2303, CS2011, CS3733, CS3133, CS3013, CS4432]
-    </p>
-
-    <h2>Experience [Java, CSS, C, C++, Database]</h2>
-    <p>
+    <h2 align = "center"> Previous CS Classes </h2>
+    <hr width=70% />
+    <div id="section">
+    <p class="c" align = "left">
+    CS1101  Introduction to Program Design <br/>
+    CS2102  Object-oriented Design Concepts<br/>
+    CS2303  System Programming Concepts<br/>
+    CS2022  Discrete Mathmatics<br/>
+    CS2011  Introduction to Machine Organization<br/>
+    CS3733  Software Engineering<br/>
+    CS3133  Foundation of Computer Science<br/>
+    CS3013  Operating System<br/>
+    CS4432  Database System II<br/>
+    CS4241  Webware(this term)<br/>
+    CS4120  Analysis of Algorithms(this term)  </p>
+    </div>
+ 
+    <h2 align="center"> Experience</h2>
+    <hr width=70% />
+     <p class="d">Java, C, C++, Database</p>
     </ul>
   </body>
+  
 </html>
