--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
           p.a,p.b,p.c,p.d {color: #709de5}
           p.c {font-family: Comic Sans MS;}
           
-
-#section{
-    width:500px;
-    float: center;
-    padding: 5px;
-    margin: 100px;
-}
-      
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
        </style>
@@ -34,7 +26,7 @@
     <h2 align = "center"> Previous CS Classes </h2>
     <hr width=70% />
     <div id="section">
-    <p class="c" align = "left">
+    <p class="c" style="margin-left:40%" line-height = 30px align = "left">
     CS1101  Introduction to Program Design <br/>
     CS2102  Object-oriented Design Concepts<br/>
     CS2303  System Programming Concepts<br/>
