Added profile picture

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="headshot.jpg" alt="Profile Picture">
     <h1>Information about Peter Maida</h1>
     <p>
       WPI class of 2020
@@ -11,12 +13,15 @@
     <p>
       Computer Science major
     </p>
-    <p>
-      Other classes taken include:
-      Software Engineering, Operating Systems, Foundations of Computer Science
-    </p>
+    
+    <h2>Course Experience</h2>
+    <ul>
+      <li>Software Engineering</li>
+      <li>Operating Systems</li>
+      <li>Foundations of Computer Science</li>
+    </ul>
 
-    <h2>Experience</h2>
+    <h2>Software Experience</h2>
     <ul>
       <li>HTML - none</li>
       <li>CSS - some</li>
