--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Information about Alex Hard</h1>
+	<img src = "https://sigmapigammaiota.org/content/users/adhard/ALEXANDER_HARD.jpg" alt="That's me!">
     <p>
       Class of 2019. first time doing any sort of webware development. 
     </p>
