--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
+  <style>
+	body {background-color: powderblue;}
+	h1   {color: blue;}
+	p    {color: red;}
+</style>
   <body>
     <h1>Information about Alex Hard</h1>
 	<img src = "https://sigmapigammaiota.org/content/users/adhard/ALEXANDER_HARD.jpg" alt="That's me!">
@@ -10,8 +15,10 @@
       Class of 2019. first time doing any sort of webware development. 
     </p>
     <p>
-      Computer Science Major. Business Minor. Taken classes such as: Databases 1, software engineering, social implications, 
-      Operating systems, systems, assembly and machine org, pretty much all undergrad courses sans 4000 levels.
+      Computer Science Major. Business Minor. 
+	</p>
+	<p>Taken classes such as: Databases 1, software engineering, social implications, 
+       Operating systems, systems, assembly and machine org, pretty much all undergrad courses sans 4000 levels.
     </p>
     <ul>   
       <li>HTML - some experience</li>
