--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
   </head>
   <style>
-	body {background-color: powderblue;}
-	h1   {color: blue;}
+	body {background-color: 99FF99;}
+	h1   {color: 006600;}
+	h2	 {color: 336633;)
 	p    {color: red;}
 </style>
   <body>
