Table of Experiences and Fonts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <style>
 	body {background-color: 99FF99;}
-	h1   {color: 006600;}
+	h1   {color: 006600; font-family: Arial;}
 	h2	 {color: 336633;)
 	p    {color: red;}
 </style>
@@ -21,16 +21,40 @@
 	<p>Taken classes such as: Databases 1, software engineering, social implications, 
        Operating systems, systems, assembly and machine org, pretty much all undergrad courses sans 4000 levels.
     </p>
-    <ul>   
-      <li>HTML - some experience</li>
-      <li>CSS - same experience </li>
-      <li>Java - experienced </li>
-      <li>JavaScript - no experience </li>
-      <li>Ruby - no experience </li>
-      <li>Python - experienced </li>
-      <li>unit testing - some experience </li>
 
-    </ul>
+	<table style="width:15%">
+		<tr>
+			<th>Language</th>
+			<th>Experience</th>
+		</tr>
+		<tr>
+			<td>CSS</td>
+			<td>Some Experience</td>
+		</tr>
+		<tr>
+			<td>java</td>
+			<td>Experienced</td>
+		</tr>
+		<tr>
+			<td>Javascript</td>
+			<td>No Experience</td>
+		</tr>
+		<tr>
+			<td>Ruby</td>
+			<td>No Experience</td>
+		</tr>
+		<tr>
+			<td>Python</td>
+			<td>Experienced</td>
+		</tr>
+		<tr>
+			<td>Unit Testing</td>
+			<td>No Experience</td>
+		</tr>
+	</table>
+
+
+
 
     <h2>Experience</h2>
     <p>
